[package]
name = "suko"
version = "0.1.0"
edition = "2021"
description = "Advanced Sudoku solver with logical strategies, backtracking, step-by-step devlogs, and CLI"
license = "MIT"
authors = ["You <you@example.com>"]
repository = ""

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
itertools = "0.12"
once_cell = "1.19"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[features]
serde = ["dep:serde", "dep:serde_json"]

[dev-dependencies]
pretty_assertions = "1.4"
