[workspace]
members = [
    "suko-core",
    "suko-tui",
    "suko-gui",
]

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Jakub <your.email@example.com>", "Contributors"]
repository = "https://github.com/Ok2dot0/Suko"
homepage = "https://github.com/Ok2dot0/Suko"
readme = "README.md"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
time = { version = "0.3", features = ["formatting", "macros"] }
uuid = { version = "1", features = ["v4", "serde"] }
