[package]
name = "suko-tui"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
suko-core = { path = "../suko-core" }
# TUI stack
crossterm = "0.27"
ratatui = { version = "0.26", default-features = false, features = ["crossterm"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
